# cyfs-ndn

./: README.md  README.zh-CN.md
doc/: CYFS TestCase Design.md  NamedFileSystem_Arch_v2_Overlay_InodeDentry.md  cyfs-trust-verification-flow.md  cyfs_v2.md  ndm_proxy_testcases.md  ndm_toolkits.md  ndm_zone_gateway.md  ndn_dir_router 需求.md
doc/CYFS Protocol/: CYFS Protocol.md  CYFS 标准对象.md  CYFS协议现有标准对象实例.md  Content Network.md  History.md  可计算的 Content Network.md
doc/GC/: named_store_gc.md  ndm_gc.md
doc/NDM Protocol/: named-data-mgr-proxy-protocol.md  named-data-mgr-zone-protocol.md  named-store-http-protocol.md  overview.md
doc/Reviews/: cyfs-verification-todo.md  ndm_v2核心设计与性能分析.md  几个重要的reader.md
src/: Cargo.toml  start.sh
src/cyfs/: Cargo.toml  readme.md
src/cyfs-lib/: Cargo.toml
src/cyfs-lib/src/: fs_types.rs  fsmeta_client.rs  lib.rs
src/cyfs/src/: lib.rs  named_file_mgr.rs
src/fs_buffer/: Cargo.toml
src/fs_buffer/src/: fb_service.rs  lib.rs  local_filebuffer.rs
src/fs_daemon/: Cargo.toml  fuse_behavior.md  readme.md  testcase.md
src/fs_daemon/src/: fs_daemon.rs  fs_daemon_tests.rs
src/fs_daemon/tests/: fuse_cli_e2e.sh
src/fs_meta/: Cargo.toml
src/fs_meta/src/: fs_meta_service.rs  fs_meta_service_tests.rs  list_cache.rs  path_resolve_cache.rs
src/named_store/: Cargo.toml
src/named_store/examples/: ndm_zone_gateway_server.rs
src/named_store/src/: backend.rs  chunk_list_reader.rs  diff_chunk_list.rs  gc_types.rs  http_backend.rs  http_gc_client.rs  lib.rs  local_fs_backend.rs  lru_hot_table.rs  named_store.rs  ndm.rs  ndm_node_gateway.rs  ndm_zone_gateway.rs  outbox_sender.rs  store_db.rs  store_http_gateway.rs  store_layout.rs  test_gc.rs  test_http_backend_mgr.rs  test_http_roundtrip.rs  test_store_init.rs  test_store_mgr.rs
src/ndn-lib/: Cargo.toml
src/ndn-lib/src/: cyfs_http.rs  fileobj.rs  hash.rs  lib.rs  msgobj.rs  object.rs  simple_object_map.rs
src/ndn-lib/src/chunk/: chunk.rs  chunk_list.rs  hasher.rs  mod.rs
src/ndn-toolkit/: Cargo.toml
src/ndn-toolkit/src/: cyfs_ndn_client.rs  cyfs_ndn_dir_server.rs  cyfs_tests.rs  lib.rs  ndm_client.rs  ndm_tests.rs  test.rs  tools.rs
src/package-lib/src/: env.rs  meta.rs  package_id.rs
src/rootfs/etc/: fs_daemon.json
src/tests/: run_ndm_zone_gateway_test.ts
