[workspace]
resolver = "2"

members = [
    "./package-lib",
    "./ndn-lib",
    "./ndm-lib",
    "./named_store",
    "./fs_buffer",
    "./ndm",
    "./fs_meta",
    "./fs_daemon",
    "./ndn-toolkit"
]

[workspace.package]
version = "0.6.0"

[workspace.dependencies]
log = "0.4"
# Pin to 1.x to avoid pulling both thiserror v1 and v2.
thiserror = "*"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
futures = "0.3"
futures-util = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-kit",branch = "main" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-lib" ,branch = "main"}
name-client = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-client" ,branch = "main"}
krpc = { git = "https://github.com/buckyos/buckyos-base.git", package = "kRPC", branch = "main" }
rbac = { git = "https://github.com/buckyos/buckyos-base.git", package = "rbac", branch = "main" }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
casbin = { version = "2.9", features = ["logging","explain"] }
lazy_static = "1.5"
rand = "0.8.5"
