[workspace]
resolver = "2"

members = [
    "./package-lib",
    "./ndn-lib",
    "./cyfs-lib",
    "./named_store",
    "./fs_buffer",
    "./cyfs",
    "./fs_meta",
    "./fs_daemon",
    "./ndn-toolkit"
]

[workspace.package]
version = "0.7.0"

[workspace.dependencies]
log = "0.4"
# Pin to 1.x to avoid pulling both thiserror v1 and v2.
thiserror = "*"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
url = "2.5.8"
http = "1.4.0"
http-body-util = "0.1.3"
bytes = "1.11.0"
futures = "0.3"
futures-util = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-kit",branch = "beta2.2" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-lib" ,branch = "beta2.2"}
name-client = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-client" ,branch = "beta2.2"}
krpc = { git = "https://github.com/buckyos/buckyos-base.git", package = "kRPC", branch = "beta2.2" }
rbac = { git = "https://github.com/buckyos/buckyos-base.git", package = "rbac", branch = "beta2.2" }
buckyos-http-server = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-http-server", branch = "beta2.2" }


jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
casbin = { version = "2.9", features = ["logging","explain"] }
lazy_static = "1.5"
rand = "0.8.5"
