[package]
name = "fs-buffer"
version.workspace = true
edition = "2021"

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
fs2 = "*"
once_cell = "*"
ndn-lib = { path = "../ndn-lib" }
cyfs-lib = { path = "../cyfs-lib" }
named_store = { path = "../named_store" }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
