[package]
name = "fs_meta"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
krpc = { workspace = true }
rusqlite = { workspace = true }
buckyos-kit = {workspace = true}
ndn-lib = { path = "../ndn-lib" }
fs-buffer = { path = "../fs_buffer" }
named_store = { path = "../named_store" }
cyfs = { path = "../cyfs" }

[dev-dependencies]
tempfile = "3"
