[package]
name = "named_store"
version.workspace = true
edition = "2021"

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
name-lib = { workspace = true }
once_cell = "*"
ndn-lib = { path = "../ndn-lib" }
async-trait = {workspace = true}
buckyos-kit = {workspace = true}
buckyos-http-server = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body = "1"
http-body-util = { workspace = true }
reqwest = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
futures-util = { workspace = true }
base64 = "0.22"
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "http1"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
env_logger = "0.11"
