[package]
name = "ndn-lib"
version.workspace = true
edition = "2021"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true } 
anyhow = "*"
base58 = "*"
serde = { workspace = true }
serde_json = { workspace = true } 
serde_jcs = "0.2.0"
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = "*"
reqwest = { workspace = true }
rusqlite = { workspace = true }
futures = { workspace = true }  
futures-util = { workspace = true }
hex = "*"
url = "*"
memmap = "*"
lazy_static = "*"
base32 = "*"
block-buffer = "=0.11.0-rc.3"
sha2 = { version = ">=0.11.0-pre.4" }
sha3 = { version = "*" }
blake2 = "*"
generic-array = "*"
typenum = "*"
crypto-common = { version = ">=0.2.0-rc.1" }
bincode = { version = "^1.3"}
rand = { workspace = true }
jsonwebtoken = "*"
parity-scale-codec = { version = "*", features = ["derive"] }
parity-util-mem = "*"
hash-db = "0.16"
memory-db = "*"
trie-db = { version = "0.29", features = ["std"] }
sp-trie = "38.0"
base64 = "0.22"
arrow = "55.0"
chrono = { workspace = true }
once_cell = "*"
unsigned-varint = "*"
pin-project = "*"
ouroboros = "*"
fs2 = "*"

buckyos-kit = { workspace = true }
name-lib = { workspace = true }
name-client = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]

env_logger = "*"
