[package]
name = "ndn-toolkit"
version.workspace = true
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
bytes = "1"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http1", "http2"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
jsonwebtoken = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
fs_extra = "*"
futures-util = { workspace = true }
futures = { workspace = true }
regex = "*"
async-recursion = "*"
version-compare = "*"
semver = "*"
toml = "*"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = "*"
dirs = "*"
async-trait = { workspace = true }
tempfile = { workspace = true }
warp = { version = "*", features = ["server"] }
rusqlite = { workspace = true }
async-fd-lock = "*"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
tokio-tar = "*"
ndn-lib = { path = "../ndn-lib" }
named_store = { path = "../named_store" }
name-lib = { workspace = true }
name-client = { workspace = true }
buckyos-kit = { workspace = true }
[dev-dependencies]
tempfile = { workspace = true }
url = { workspace = true }
base64 = "0.22"
buckyos-http-server = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
